# bomberman

./: .gdbinit  CMakeLists.txt  Dockerfile  README.md  docker.sh  workspace.code-workspace
.github/workflows/: main.yml
ci/format/: run.sh
ci/lint/: run.sh
client/src/: ConfigLoader.cpp  Game.hpp  GlobalConfig.hpp  main.cpp
client/src/interface/: Button.cpp  Button.hpp  CMakeLists.txt
client/src/rsrcManagement/: ResourceManager.hpp
client/src/scene/: CMakeLists.txt  Scene.cpp  SceneManager.hpp
client/src/scene/menu/: CMakeLists.txt  Menu.hpp
client/src/scene/running/: CMakeLists.txt  Running.cpp  Running.hpp
client/src/scene/settings/: CMakeLists.txt  Settings.hpp
common/: ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt
common/ut/: TestArgumentParser.cpp
scripts/: ci.sh  dev.sh
server/: ConfigLoader.hpp
src/: .clang-tidy  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.hpp  Event.hpp  Game.cpp  Game.hpp  GameContext.hpp  GlobalConfig.hpp  Keyboard.cpp  Keyboard.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp  main.cpp
src/client/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.hpp  Game.cpp  Game.hpp  GlobalConfig.hpp  main.cpp
src/client/gui/: Button.cpp  Button.hpp  CMakeLists.txt  Checkbox.cpp  Checkbox.hpp  TextBox.cpp  TextBox.hpp  Widget.hpp  WidgetManager.cpp  WidgetManager.hpp
src/client/interface/: Button.cpp  Button.hpp  CMakeLists.txt
src/client/resource/: FontManager.hpp  ResourceManager.hpp  TextureManager.hpp
src/client/rsrcManagement/: FontManager.hpp  ResourceManager.hpp  TextureManager.hpp
src/client/scene/: CMakeLists.txt  GameContext.hpp  Scene.cpp  Scene.hpp  SceneBase.cpp  SceneBase.hpp  SceneId.hpp  SceneManager.cpp  SceneManager.hpp  SharedData.hpp
src/client/scene/game/: CMakeLists.txt  MessageHandler.cpp  MessageHandler.hpp  Player.cpp  Player.hpp  PlayerModel.cpp  PlayerModel.hpp  Scene.cpp  Scene.hpp
src/client/scene/lobby/: CMakeLists.txt  Scene.cpp  Scene.hpp
src/client/scene/menu/: CMakeLists.txt  Menu.cpp  Menu.hpp  Scene.cpp  Scene.hpp
src/client/scene/running/: CMakeLists.txt  Running.cpp  Running.hpp
src/client/scene/settings/: CMakeLists.txt  Scene.cpp  Scene.hpp  Settings.cpp  Settings.hpp
src/common/: ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  ConnectionInfo.hpp  ConnectionManager.hpp  GlobalConfigBase.hpp  Log.cpp  Log.hpp  LogLevel.hpp  Networking.hpp  NonCopyable.hpp  ToUnderlying.hpp  Utils.hpp
src/common/cmake/: add_ut.cmake
src/common/itf/: core.proto  game.proto  lobby.proto  query.proto  types.proto  update.proto
src/common/logging/: CMakeLists.txt  Level.hpp  Log.cpp  Log.hpp
src/common/messages/: CMakeLists.txt  core.proto  game.proto  lobby.proto  query.proto  serverInfo.proto  update.proto
src/common/ut/: CMakeLists.txt  TestArgumentParser.cpp
src/interface/: Button.cpp  Button.hpp  CMakeLists.txt
src/messages/: CMakeLists.txt  playerPosition.proto
src/rsrcManagement/: FontManager.hpp  ResourceManager.hpp  TextureManager.hpp
src/scene/: CMakeLists.txt  Menu.cpp  Menu.hpp  Running.cpp  Running.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/scene/menu/: CMakeLists.txt  Menu.cpp  Menu.hpp
src/scene/running/: CMakeLists.txt  Running.hpp
src/scene/settings/: CMakeLists.txt  Settings.cpp  Settings.hpp
src/server/: Application.cpp  Application.hpp  CMakeLists.txt  Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  ConfigLoader.cpp  Database.cpp  Database.hpp  GlobalConfig.hpp  Lobby.cpp  Lobby.hpp  main.cpp
src/utils/: ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  Log.hpp  Vector2.hpp
src/utils/ut/: CMakeLists.txt  TestArgumentParser.cpp
